feat: :arrow_up: improving the response by asking for answers